--- a/index.html
+++ b/index.html
@@ -204,14 +204,14 @@
                     <section></section>
                     <div class="row" id="currentstatus-1">
                         <div class="col">
-                            <h3 id="todays-report" class="container-fluid mt-5">Reports on 12 sep 2020</h3>
+                            <h3 id="todays-report" class="container-fluid mt-5">Reports on 13 sep 2020</h3>
                             <div class="row mt-4">
                                 <div class="col-lg-6 mb-4">
                                     <div class="card text-white bg-primary shadow">
                                         <div class="card-body">
                                             <p class="m-0">Today's Positive</p>
                                             <p class="text-white-50 small m-0"></p>
-                                            <p class="text-white-50 small m-0">2885</p>
+                                            <p class="text-white-50 small m-0">3139</p>
                                         </div>
                                     </div>
                                 </div>
@@ -219,7 +219,7 @@
                                     <div class="card text-white bg-success shadow">
                                         <div class="card-body">
                                             <p class="m-0">Total Positive</p>
-                                            <p class="text-white-50 small m-0">28805&nbsp;<br></p>
+                                            <p class="text-white-50 small m-0">&nbsp;30075<br></p>
                                         </div>
                                     </div>
                                 </div>
@@ -228,7 +228,7 @@
                                         <div class="card-body">
                                             <p class="m-0">Contact cases</p>
                                             <p class="m-0"></p>
-                                            <p class="text-white-50 small m-0">2640</p>
+                                            <p class="text-white-50 small m-0">2921</p>
                                         </div>
                                     </div>
                                 </div>
@@ -236,7 +236,7 @@
                                     <div class="card text-white bg-warning shadow">
                                         <div class="card-body">
                                             <p class="m-0">Patients Relieved</p>
-                                            <p class="text-white-50 small m-0">1944</p>
+                                            <p class="text-white-50 small m-0">1855</p>
                                         </div>
                                     </div>
                                 </div>
@@ -244,7 +244,7 @@
                                     <div class="card text-white bg-danger shadow">
                                         <div class="card-body">
                                             <p class="m-0">Unknown Sources</p>
-                                            <p class="text-white-50 small m-0">287</p>
+                                            <p class="text-white-50 small m-0">251</p>
                                         </div>
                                     </div>
                                 </div>
@@ -252,7 +252,7 @@
                                     <div class="card text-white bg-secondary shadow">
                                         <div class="card-body">
                                             <p class="m-0">Death Rate</p>
-                                            <p class="text-white-50 small m-0">15</p>
+                                            <p class="text-white-50 small m-0">14</p>
                                         </div>
                                     </div>
                                 </div>
