--- a/districtwise.html
+++ b/districtwise.html
@@ -102,14 +102,11 @@
             <footer
                 class="bg-white sticky-footer">
                 <div class="container container-fluid">
-                    <div class="intro">
-                        <h2 class="text-center">Prediction of new positive on date 15/09/2020</h2>
-                        <p class="text-center">Prediction of new positive rate on the basis of various features such as&nbsp;Total_Sent, Sent_On_Date, Proceed_In_24_Hr,Total_Positive<br><br></p>
-                    </div>
+                    <div class="intro"></div>
                     <div class="row people">
                         <div class="col-md-6 col-lg-4 item">
                             <div class="box"></div>
-                            <div class="author"><img class="rounded-circle" src="assets/img/testresults/models.png"></div>
+                            <div class="author"></div>
                         </div>
                     </div>
                 </div>
