--- a/testresults.html
+++ b/testresults.html
@@ -102,7 +102,7 @@
                     <div class="intro">
                         <h2 class="text-center container-fluid mt-4">Prediction on new positive&nbsp; rate&nbsp;</h2>
                         <p class="text-center container-fluid">Prediction of new positive rate on the basis of various features such as&nbsp;Total_Sent, Sent_On_Date, Proceed_In_24_Hr,Total_Positive<br></p>
-                    </div>
+                    </div><img class="img-fluid" src="assets/img/testresults/multilinearregression.png">
                     <div class="row people">
                         <div class="col container-fluid">
                             <div class="alert alert-success mt-4 container-fluid" role="alert"><span class="container-fluid"><strong>check out the code&nbsp;</strong><i class="fa fa-github"></i><a class="alert-link" href="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Test_Results/Analysis_Test_Results_with_Prediction.ipynb">&nbsp;here</a><br></span></div>
