--- a/testresults.html
+++ b/testresults.html
@@ -99,10 +99,9 @@
                 </div><img class="img-fluid img-thumbnail" src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Test_Results/results/Proceedin24.png?raw=true" style="text-align: center;"><img class="img-fluid justify-content-center align-items-center align-content-center align-self-center mx-auto img-fluid img-thumbnail"
                     src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Test_Results/results/sentondate.png?raw=true" style="text-align: center;">
                 <div class="container-fluid text-center container-fluid">
-                    <div class="intro">
-                        <h4 class="text-center container-fluid mt-4">Prediction on new positive&nbsp; rate&nbsp;</h4>
-                        <p class="text-center container-fluid">Prediction of new positive rate on the basis of various features such as&nbsp;Total_Sent, Sent_On_Date, Proceed_In_24_Hr,Total_Positive<br></p>
-                    </div><img class="img-fluid" src="assets/img/testresults/miniGif_20201002191541[1].gif">
+                    <div class="intro"></div>
+                    <h5 class="text-capitalize text-center text-dark border rounded-0" style="padding: 10px 0px;padding-top: 10px;"><br><strong>Prediction of new positive rate&nbsp;</strong><br></h5>
+                    <p class="text-lowercase text-dark">ON THE BASIS OF VARIOUS FEATURES SUCH AS&nbsp;TOTAL_SENT, SENT_ON_DATE, PROCEED_IN_24_HR,TOTAL_POSITIVE<br><br></p><img class="img-fluid" src="assets/img/testresults/miniGif_20201002191541[1].gif">
                     <div class="row people">
                         <div class="col container-fluid">
                             <div class="alert alert-success mt-4 container-fluid" role="alert"><span class="container-fluid"><strong>check out the code&nbsp;</strong><i class="fa fa-github"></i><a class="alert-link" href="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Test_Results/Analysis_Test_Results_with_Prediction.ipynb">&nbsp;here</a><br></span></div>
